@@ -1,5 +1,5 @@
 {
-  "name": "starter-restaurant-reservation",
+  "name": "restaurant-reservation-capstone",
   "version": "1.0.0",
   "description": "Starter project restaurant reservation system",
   "private": true,
